# forecast-tiles

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ingest-currents.yml  ingest-ensemble.yml  ingest-waves.yml  ingest-weather-ecmwf.yml  ingest-weather.yml
contracts/: forecast-latest.schema.json  forecast-manifest.schema.json  forecast-tile.schema.json
docs/: phase0-results.md
scripts/: make_golden_fixture.py  size_prototype.py
src/ingest/: __init__.py  cli.py  cube.py  publish.py  tile.py  validate.py
src/ingest/sources/: __init__.py  base.py  cmems.py  ecmwf_open.py  gefs.py  gfs.py  gfswave.py  rtofs.py
src/tilekit/: __init__.py  codec.py  tiles.py
tests/: conftest.py  test_codec.py  test_cube.py  test_dry_run_integration.py  test_golden_fixture.py  test_publish.py  test_sources.py  test_tile.py  test_validate.py
tests/fixtures/: golden-N40W010-ensemble.expected.json  golden-N40W010-weather.expected.json
